<resources>

    <string name="app_name">广二师就业信息</string>
    
    <!-- 头部 -->
    <string name="news_top_right_loginbtn">登录</string>
    <string name="news_top_right_settingbtn">设置</string>
	<string name="title_inform">事务通知</string>
	<string name="title_recruitment">招聘信息</string>
	<string name="title_practive">就业实习信息</string>
	<string name="title_session">招聘专场信息</string>
    <string name="title_news_category_inform">通知</string>
    <string name="title_news_category_recruitment">招聘</string>
    <string name="title_news_category_practive">实习</string>
    <string name="title_news_category_session">专场</string>
    
    <!-- jazzy 效果 -->
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    
    <!-- 刷新 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载……</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_none">已经到最后了</string><!-- 暂未使用 -->
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <!-- 网址 -->
    <string name="website_url">http://210.38.64.161:7000</string><!-- 地址头（主页） -->
    <string name="inform_url">http://210.38.64.161:7000/job/xwtz/?_page_=</string><!-- 事务通知 -->
    <string name="recruitment_url"></string><!-- 招聘信息 -->
    <string name="internship_url">http://210.38.64.161:7000/job/jysx/?_page_=</string><!-- 就业实习 -->
    <string name="organises_url"></string><!-- 招聘专场 -->

</resources>
