<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app1="http://schemas.android.com/apk/res/edu.department.employment.infosys"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/lightblue"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@color/black"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layout_top_left"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@color/black"
            android:orientation="vertical" >

            <edu.department.employment.infosys.jazzyviewpager.JazzyViewPager
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/jazzy_pager"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/lightskyblue"
                app1:outlineColor="@color/lightskyblue" />
        </LinearLayout>

        <Button
            android:id="@+id/Login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/setting_btn"
            android:layout_marginRight="16sp"
            android:layout_toLeftOf="@+id/setting_btn"
            android:background="@android:color/transparent"
            android:text="@string/news_top_right_loginbtn"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/setting_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/news_top_right_settingbtn"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="@drawable/bg_header_top"
        android:paddingLeft="5dip"
        android:paddingRight="5dip" >

        <LinearLayout
            android:id="@+id/header_item"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tv_title_inform"
                    style="@style/header_title_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/title_news_category_inform" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tv_title_recruitment"
                    style="@style/header_title_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/title_news_category_recruitment" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tv_title_practive"
                    style="@style/header_title_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/title_news_category_practive" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tv_title_session"
                    style="@style/header_title_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/title_news_category_session" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>